# interpogate

./: .gitignore  LICENSE  README.md  docker-compose.yml  standalone.md
example/: README.md  requirements.txt
src/frontend/: Dockerfile  package-lock.json  package.json  singlefile.build.js  tailwind.config.ts  tsconfig.json  vite.config.ts
src/frontend/src/: app.css  app.html
src/frontend/src/components/: App.svelte  AttentionSelector.svelte  BarGraphSelector.svelte  Dim.svelte  DimSelect.svelte  Hook.svelte  ModelResponse.svelte  ModelResults.svelte  Shape.svelte  Textarea.svelte  VizSelector.svelte
src/frontend/src/lib/: ai.ts  api.ts  geo.ts  graph.ts  layer.ts  placeholder.ts  store.ts  switch.ts  viz.ts
src/frontend/src/lib/proto/: InterpogateServiceClientPb.ts  interpogate.client.ts  interpogate.ts  interpogate_pb.d.ts
src/frontend/src/lib/proto/google/protobuf/: empty.ts
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/protos/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  protoc_cmd.sh  requirements.txt
src/protos/src/: interpogate.proto
src/proxy/: README.md  envoy.yaml
src/python/: Dockerfile  interpogate.py  pyproject.toml  requirements.txt  server.py
src/python/proto/: __init__.pyi  interpogate_pb2.py  interpogate_pb2.pyi  interpogate_pb2_grpc.py
src/python/static/: index.html
